# ChangeLog for dev-db/tarantool
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*tarantool-1.4.9999 (15 May 2013)

  23 May 2013; Roman Tsisyk <roman@tarantool.org> +tarantool-1.4.9999.ebuild:
  Add "client" and "server" use flags

  15 May 2013; Roman Tsisyk <roman@tarantool.org> +tarantool-1.4.9999.ebuild:
  Initial commit