@@ -4,7 +4,7 @@ AUX tarantool.cfg 1922 SHA256 6de3f6eee2a6d3196610a9970c991d6e2eed17d6596ba665ed
 AUX tarantool.cron 156 SHA256 9369b778869b6a0917f6e1341a7453ed3a1f3958451ac07ec2788a1903573548 SHA512 ae2ac979db301c86930672e1d5f63c6bda930152d6afb1ff983efcfd7244fe9560f45637821893135f7e92fa2489eaef6872efa62a2f1605703ef70f8108789c WHIRLPOOL ac2c97b31dff4da52925d8df538424abdcd01bb3381c01a76766ba7c5f32e68ff85e0cfb5d055961bfb15901f8fb7ff5d44bbf96b7c8fc5341dbcaa8fcee3c1d
 AUX tarantool.initd 2011 SHA256 9f84b977ce1e0a7ddc9e33867aea356b1142e389918050f21516e861d816d502 SHA512 935bd300774c8284e603b3e012023640dc4365da7c2c73d6c57e32f4bdf39443e19d90b8b34c95ac2255e188813164b0412dac2edf7fee06ee5452ccfba5eeae WHIRLPOOL 9d5616fa1e1af4e145e2bd06ca371a13cbbea21839815f9f993f428eed0df1dc8009ccb28e06d068598f49fea7b070af20b433ccbfad16498549fa881a59097a
 AUX tarantool.logrotate 218 SHA256 8a96e24faa542c125134bcf8820f6c392ab5feae058a116a7f7c094b79f74d52 SHA512 5699fd14d2d022b4ea94aff96e063ec0033d9170fe15c25bb140a2e764df796899431d79998e591013351030328caf2610b774e8e95d9dd934ee02f8f32121d1 WHIRLPOOL 1415030846bcfa1f9e3e511dcaf5d748bfb0aa6309d133b93308af46e358afcc6b2de75c3c37a3814aaa5f2d774d5becf1429e60a54fabec6f2ce6914513b916
-EBUILD tarantool-1.4.9999.ebuild 4779 SHA256 846777d3955ff5d408b5f2d7f8201d161bc98ef783d59cd118bce67805dd1a24 SHA512 cf5ff806397a53c2e8fd8b5e710c67ea9c649788c9fad01504822734186f2e70bbee0504079f95ea58eee740a36121d72b4536bd78f701e0ac1bf823e5dcebc0 WHIRLPOOL 127b196558ad04ed197987170b322ac6474f0f2d7056d6cc656c68605244947f207c8c70af2be43770c364dd90de823c796f7b6012196d31b1af35e13dc8cd6e
-EBUILD tarantool-9999.ebuild 4779 SHA256 846777d3955ff5d408b5f2d7f8201d161bc98ef783d59cd118bce67805dd1a24 SHA512 cf5ff806397a53c2e8fd8b5e710c67ea9c649788c9fad01504822734186f2e70bbee0504079f95ea58eee740a36121d72b4536bd78f701e0ac1bf823e5dcebc0 WHIRLPOOL 127b196558ad04ed197987170b322ac6474f0f2d7056d6cc656c68605244947f207c8c70af2be43770c364dd90de823c796f7b6012196d31b1af35e13dc8cd6e
-MISC ChangeLog 364 SHA256 e0fee208879c164590d5ba62544725de81d3a12aa574d64a5f7e78034f76dffa SHA512 98631816c52f9b3b7787eadc9d9758c0bc3a92e25c13470bd54afc91612423e3cb02f0d3f742c10c99da098c2b9f78dbd9ee45f1182f847c04e1b2253afe868a WHIRLPOOL be251c51da2881b841d9235496e9fb85844a6219a8541279969a0f5e3597ffdf4bf661bed30349585966cf201b1e8367009c2b3050880b000f620b7d8e43a7b4
+EBUILD tarantool-1.4.9999.ebuild 4673 SHA256 56e91eb45293220eccc8566adbb029d19f3651c2f5c7e63cd80985dba8d75cc2 SHA512 bc41a4ff1bd6847b93e0c102c3b07843a21ba317e2b7db84bd5e7b002faebfc7301b68138e62bff030109c1b3d7a502396276173148bafde623b477a6f9cee70 WHIRLPOOL 0ed107ad7e8d089c929c85dccdb90e3e06a82e5beeb63afaca732cc22d6f127bdfc7662c50406fee5b35ce6a714ab747aad534d28874dfdbd912cb588e0997f0
+EBUILD tarantool-9999.ebuild 4487 SHA256 bad030ba0b30d4f08aebce7bbfc43683a02036130065eab2fe0aa7d650f806ff SHA512 ba1a5a547e001720bd5d624b1338e3f6b3bc14c5c5f73bf0fbed61aeace4d2a6196f33a44d11b4f346ff824409473813d5fcb90b092d1dcb582605d50796df3e WHIRLPOOL 39b57ba24a738a2f59852642a6038212745c8386797598f1200fcf1796775bbec26faab0c900dc42ca5de9236a9f402e164bf39a5fc158a0045b6757487ef46c
+MISC ChangeLog 512 SHA256 43190cb5bdcd243de90e7a67831228c58fb34234019d452ba5a850cf56f17fd1 SHA512 8a4da8fdf4d0f54e7710ca66c716669268cddaabf88643a97614b6cd2c84c72a420e91f86c344006941872304cd31617ef17146ff00cf926b3051dfd0bff0257 WHIRLPOOL a331e6e4c87c6c6a7fbfe11f810823f9e2a55e87941fe55c90e4d205d75c556ffff51e81ac08c3807bad6acac6394b8524d0e242adfb5c2123dfa390c4d6207a
 MISC metadata.xml 1931 SHA256 d0a34532f0ee46d2392e46f0212c6940f7d166309561532c971838323d5e31f6 SHA512 e557fbaadea6fc287747ab6707e54ce5d96146363dab8efd7f2a05c4fa31fb38b1e368f3e747c8ecf52d1858d3b3553df4745bc91453a5bce454d54bcd38e155 WHIRLPOOL 9ace1d22d0170a3754ce9a623666b037ce1f438fd266c3dee08be2d8b7c0487a3ce2a7b7b20ec891987f00a08e2419cad7ad3041edba93e30b81349f662d3b5d
